<resources>
    <string name="app_name">NoGlut</string>
    <string name="steps_description_for_noglut_app">Steps Description for NoGlut app</string>
    <string name="skip_button">Skip</string>
    <string name="next_button">Next</string>
    <string name="get_started_button">Get Started</string>
    <string name="all_gluten_free">All Gluten-Free</string>
    <string name="make_it_easy">Make it Easy</string>
    <string name="enjoy_delicious_places">Enjoy Delicious Places</string>
    <string name="find_the_best_restaurants">Find the best restaurants\n near you!</string>
    <string name="find_restaurants_filtered_to_your_specifications">Find restaurants filtered to your\n specifications, Compare with Prices!</string>
    <string name="find_useful_reviews_save_share_your_discoveries_with_others">Find useful Reviews, save and Share\n your Discoveries with others!</string>
    <string name="welcome_header">Welcome</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="login_in_with_email">Login in with Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset">Reset</string>
    <string name="didn_t_have_an_account">Didn’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_description">Enter the email address and we will send you a link to reset your password.</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_log_in">Back to Log In</string>
    <string name="link_sent">Link Sent</string>
    <string name="sent_link_description">We have sent a password reset\nlink to your email</string>
    <string name="check_your_email">Check your email</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="logout_button">Logout</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>

</resources>