<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".auth.WelcomeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/cera_pro_regular"
            android:text="@string/welcome_header"
            android:textColor="@color/slat_grey"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/button_login_fb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_fb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/facebook_rounded_button"
            android:drawableStart="@drawable/ic_facebook"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cera_pro_regular"
            android:paddingStart="60dp"
            android:paddingEnd="80dp"
            android:text="@string/log_in_with_facebook"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_welcome"
            app:layout_constraintWidth_percent="0.9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/google_rounded_button"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cera_pro_regular"
            android:paddingStart="60dp"
            android:paddingEnd="100dp"
            android:text="@string/log_in_with_google"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login_fb"
            app:layout_constraintWidth_percent="0.9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cera_pro_regular"
            android:paddingStart="60dp"
            android:paddingEnd="100dp"
            android:text="@string/login_in_with_email"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login_google"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/text_view_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/cera_pro_thin"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login_email"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_border"
            android:elevation="8dp"
            android:fontFamily="@font/cera_pro_regular"
            android:text="@string/sign_up"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_or"
            app:layout_constraintWidth_percent="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>